React Router y Tailwind
Se agruparon rutas y se aplicaron clases de tailwind al layout principal

--- a/customer-manager/public/index.html
+++ b/customer-manager/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Administrador de Clientes</title>
   </head>
-  <body class="min-h-screen bg-gray-100">
+  <body style="background: #EFEFEF;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
